# apps/user/models/user.go
@@ -1,7 +1,7 @@
 package models
 
 import (
-	"fmt"
+	"gorm.io/gorm"
 	"time"
 	"venus/common/database"
 )
@@ -11,6 +11,7 @@ func init() {
 	if err != nil {
 		panic("failed to migrate database")
 	}
+
 }
 
 var (
@@ -18,11 +19,21 @@ var (
 )
 
 type User struct {
-	Uuid     string     `form:"uuid" json:"uuid" gorm:"primary_key;uuid"` //uuid
-	Name     string     `form:"name" json:"name"`
-	Email    string     `form:"email" json:"email"`
-	Password string     `form:"password" json:"password"`
-	Birthday *LocalTime `form:"birthday" json:"birthday"`
-	Tell     string     `form:"tell" json:"tell"`
-	Gender   string     `form:"gender" json:"gender"`
+	gorm.Model
+	Uuid     string `form:"uuid" json:"uuid" gorm:"primary_key;uuid"` //uuid
+	Name     string `form:"name" json:"name"`
+	Email    string `form:"email" json:"email"`
+	Password string `form:"password" json:"password"`
+	Birthday string `form:"birthday" json:"birthday"`
+	Tell     string `form:"tell" json:"tell" `
+	Gender   string `form:"gender" json:"gender"`
+}
+
+func (u *User) BeforeSave() error {
+	t, err := time.Parse("2006-01-02", u.Birthday)
+	if err != nil {
+		return err
+	}
+	u.Birthday = t.Format("2006-01-02")
+	return nil
 }
