# docs/swagger.json
@@ -29,7 +29,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/views.UserParam"
                         }
                     }
                 ],
@@ -55,7 +55,7 @@
                 }
             }
         },
-        "/user/update": {
+        "/user/update/{uuid}": {
             "post": {
                 "description": "创建用户",
                 "consumes": [
@@ -70,12 +70,19 @@
                 "summary": "更新用户信息",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "UUID",
+                        "name": "uuid",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "description": "请示参数data",
                         "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/views.UserParam"
                         }
                     }
                 ],
@@ -101,7 +108,7 @@
                 }
             }
         },
-        "/user/{id}": {
+        "/user/{uuid}": {
             "get": {
                 "description": "这是一个查询用户详细信息接口",
                 "produces": [
@@ -114,8 +121,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "ID",
-                        "name": "id",
+                        "description": "UUID",
+                        "name": "uuid",
                         "in": "path",
                         "required": true
                     }
@@ -141,8 +148,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "ID",
-                        "name": "id",
+                        "description": "UUID",
+                        "name": "uuid",
                         "in": "path",
                         "required": true
                     }
@@ -296,27 +303,37 @@
                 }
             }
         },
-        "models.User": {
+        "views.UserParam": {
             "type": "object",
+            "required": [
+                "birthday",
+                "email",
+                "tell"
+            ],
             "properties": {
-                "age": {
-                    "type": "integer"
+                "birthday": {
+                    "type": "string",
+                    "example": "1992-09-01"
                 },
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "8888888@qq.com"
                 },
                 "gender": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "male"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "张三"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "xxxxxxxx"
                 },
                 "tell": {
-                    "type": "string"
-                },
-                "uuid": {
-                    "description": "uuid",
-                    "type": "string"
+                    "type": "string",
+                    "example": "133-3333-3333"
                 }
             }
         }
